--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "ZM Chameleon",
-	"description": "This extension is designed to make the Zoneminder viewing experience better!",
+	"description": "This extension is designed to make the ZoneMinder viewing experience better!",
 	"version": "1.0.1",
 	"permissions": [
 		"activeTab",
