Add button on montage view to go to the console screen
Still need to change the image and put some logic in to take it out of fullscreen if it is in fullscreen.

--- a/manifest.json
+++ b/manifest.json
@@ -63,6 +63,7 @@
 		"512": "icons/icon-512.png"
 	}, 
 	"web_accessible_resources": [
-		"fonts/Digital7-1e1Z.ttf"
+		"fonts/Digital7-1e1Z.ttf",
+		"icons/icon-128.png"
 	]
 }
